# aim2dat

./: .buildinfo  .flake8  .pre-commit-config.yaml  2025.1_standard_geo_opt_low.yaml  CHANGELOG  MANIFEST.in  README.md  api-aiida_processes.html  changelog.html  examples.html  fa-overview.html  fa-overview.ipynb  genindex.html  htw-cp2k_calculations.html  htw-overview.html  htw-workflow_builders.html  htw-workflow_builders.ipynb  index.html  inst_linux.html  inst_windows.html  installation.html  magnetic_configurations_volume.html  ml-overview.html  ml-overview.ipynb  ml-scikit_learn.html  objects.inv  plots-overview.html  plots-properties_and_functions.html  plots-properties_and_functions.ipynb  plots-simple_plot.html  plots-simple_plot.ipynb  plots-subplots.html  plots-subplots.ipynb  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg  stra-multiple_structures.html  stra-multiple_structures.ipynb  stra-overview.html  (+8 more)
.github/workflows/: build_doc.yml  pre-commit.yml  system_comp.yml  tests.yml
_modules/: index.html
_sources/: changelog.rst.txt  htw-workflow_builders.ipynb.txt  index.rst.txt  inst_windows.rst.txt  stra-multiple_structures.ipynb.txt  stra-overview.rst.txt  user_guide.rst.txt
_sources/examples/: fct-fingerprint_comparison.ipynb.txt  plots-band_structure_and_pdos_phonopy.ipynb.txt  plots-band_structure_and_pdos_qe.ipynb.txt  plots-band_structure_materials_project.ipynb.txt  plots-partial_charges_critic2.ipynb.txt  plots-simple_plot.ipynb.txt  plots-spectroscopy.ipynb.txt  strct-partial_rdf.ipynb.txt
aim2dat/: __init__.py
aim2dat/aiida_data/: __init__.py  gaussian_cube_data.py  surface_data.py
aim2dat/aiida_workflows/: __init__.py  _workflow_builder_utils.py  utils.py  workflow_builder.py
aim2dat/chem_f/: __init__.py  chem_formula.py
aim2dat/elements/: __init__.py  atomic_masses.py  data.py  electronegativity.py  element_properties.py
aim2dat/ext_interfaces/: __init__.py  aiida.py  ase_atoms.py  ase_surface.py  dscribe.py  graphs.py  graphviz.py  hdf5.py  hybrid3.py  import_opt_dependencies.py  mofxdb.py  mp.py  mp_openapi.py  openmm.py  optimade.py  oqmd.py  pandas.py  phonopy.py  pymatgen.py  pyxtal.py  seekpath.py  spglib.py
aim2dat/fct/: __init__.py  discretization.py  fingerprint.py  function_comparison.py  hull.py  smearing.py
aim2dat/io/: __init__.py  auxiliary_functions.py  base_parser.py  cif.py  cp2k.py  critic2.py  decorators.py  fhi_aims.py  gaussian_cube.py  hdf5.py  phonopy.py  qe.py  utils.py  xmgrace.py  xsf.py  xyz.py  yaml.py  zeo.py
aim2dat/ml/: __init__.py  cell_grid_search.py  kernels.py  metrics.py  transformers.py  utils.py
aim2dat/plots/: __init__.py  band_structure_dos.py  base_band_structure.py  base_dos.py  base_mixin.py  base_plot.py  matplotlib_backend.py  partial_charges.py  partial_rdf.py  phase.py  planar_fields.py  plotly_backend.py  simple_plot.py  spectroscopy.py  surface.py  thermal_properties.py
aim2dat/strct/: __init__.py  analysis_mixin.py  brillouin_zone_2d.py  comparison.py  constraints_mixin.py  import_export_mixin.py  io_interface.py  manipulation_mixin.py  mixin.py  named_structures.py  stability.py  strct.py  strct_comparison.py  strct_coordination.py  strct_io.py  strct_manipulation.py  strct_misc.py  strct_point_groups.py  strct_prdf.py  strct_space_groups.py  strct_super_cell.py  strct_validation.py  structure.py  structure_collection.py  structure_importer.py  structure_operations.py  surface.py  surface_utils.py  test_new_interface.ipynb  validation.py
aim2dat/units/: __init__.py  constants.py  converters.py  quantities.py
aim2dat/utils/: __init__.py  chem_formula.py  dict_tools.py  element_properties.py  maths.py  phonopy_utils.py  print.py  space_groups.py  strct.py  units.py
autoapi/aim2dat/: index.html
doc/: Makefile  requirements.txt
doc/source/: api-aiida_processes.rst  conf.py  examples.rst  fa-overview.ipynb  htw-cp2k_calculations.ipynb  htw-overview.rst  index.rst  inst_linux.rst  installation.rst  ml-overview.ipynb  ml-scikit_learn.rst  plots-overview.rst  plots-properties_and_functions.ipynb  plots-simple_plot.ipynb  plots-subplots.ipynb  stra-multiple_structures.ipynb  stra-structure.ipynb  stra-structure_importer.ipynb  stram-analysis.ipynb  stram-multiple_structures.ipynb  stram-overview.rst  stram-structure.ipynb  stram-surfaces.ipynb  user_guide.rst
example_notebooks/: apply_pressure_and_strain.ipynb  fct-discretization.ipynb  plots-band_structure_and_pdos_cp2k.ipynb  plots-band_structure_and_pdos_fhi-aims.ipynb  plots-band_structure_and_pdos_phonopy.ipynb  plots-band_structure_and_pdos_qe.ipynb  plots-band_structure_materials_project.ipynb  plots-partial_charges_critic2.ipynb  plots-planar_fields_critic2.ipynb  plots-simple_plot.ipynb  strct-coordination_number_analysis.ipynb  strct-manipulation.ipynb  strct-odb_interfaces.ipynb  strct-partial_rdf.ipynb  strct-pressure_and_strain.ipynb
examples/: fct-discretization.html  fct-discretization.ipynb  fct-fingerprint_comparison.html  fct-fingerprint_comparison.ipynb  plots-band_structure_and_pdos_cp2k.html  plots-band_structure_and_pdos_cp2k.ipynb  plots-band_structure_and_pdos_fhi-aims.html  plots-band_structure_and_pdos_fhi-aims.ipynb  plots-band_structure_and_pdos_phonopy.html  plots-band_structure_and_pdos_phonopy.ipynb  plots-band_structure_and_pdos_qe.html  plots-band_structure_and_pdos_qe.ipynb  plots-band_structure_materials_project.html  plots-band_structure_materials_project.ipynb  plots-partial_charges_critic2.html  plots-partial_charges_critic2.ipynb  plots-planar_fields_critic2.html  plots-planar_fields_critic2.ipynb  plots-simple_plot.html  plots-simple_plot.ipynb  plots-spectroscopy.html  strct-coordination_number_analysis.html  strct-coordination_number_analysis.ipynb  strct-odb_interfaces.html  strct-odb_interfaces.ipynb  strct-partial_rdf.html  strct-partial_rdf.ipynb
tests/: __init__.py  auxiliary_functions.py  conftest.py  test_chem_f.py  test_elements.py  test_units.py
tests/aiida_data/: test_gaussian_cube_data.py  test_surface_data.py
tests/aiida_workflows/: test_cp2k_calcjob.py  (+18 more)
(+2032 files in other folders)
